docs/RobolGrammar.txt
Program ::= FunctionList
FunctionList ::= Function FunctionList | null
Function ::= ReturnType Identifier( ParameterList ) { StatementList }

StatementList ::= Statement StatementList | null
Statement ::= DeclarationStatement | AssignmentStatement | ExpressionStatement | SelectionStatement | ReturnStatement | EmptyStatement

DeclarationStatement ::= Declaration;
AssignmentStatement = Assignment;
ExpressionStatement ::= FunctionCall;
ReturnStatement ::= return Expression;
EmptyStatement ::= ;

SelectionStatement ::= IfStatement
IfStatement 
	  ::= if ( Expression ) { StatementList } 
		| ( Expression ) { StatementList } else { StatementList } 
		| ( Expression ) { StatementList } else IfStatement 

Declaration ::= VariableType Identifier | VariableType Identifier = Expression
Assignment ::= Identifier = Expression

Expression ::= UnaryExpression | LogicalExpression

UnaryExpression ::= ???

LogicalExpression ::= LogicalOrExpression
LogicalOrExpression ::= LogicalAndExpression | LogicalAndExpression or Expression
LogicalAndExpression ::= EqualityExpression | EqualityExpression and Expression
EqualityExpression ::= RelationalExpression | RelationalExpression ==|!= Expression
RelationalExpression ::= ArithmeticExpression | ArithmeticExpression <|>|<=|>= ArithmeticExpression

ArithmeticExpression ::= AdditiveExpression
AdditiveExpression ::= MultiplicativeExpression +|- Expression
MultiplicativeExpression ::= ExponentialExpression *|/|% Expression
ExponentialExpression ::= Primary ^ Primary

Primary ::= Identifier | FunctionCall | (Expression) | Constant | UnaryOperator Primary
FunctionCall ::= Identifier(ArgumentList)

ParameterList ::= Parameter, ParameterList | null
Parameter ::= VariableType Identifier

ArgumentList ::= Argument, ArgumentList | null
Argument ::= Expression

Constant ::= IntegerConstant | NumberConstant | ByteConstant | CharacterConstant | StringConstant | BooleanConstant
IntegerConstant ::= [0-9]+
NumberConstant ::= [0-9]+(.[0-9]*)?
ByteConstant ::= [a-fA-F0-9]
CharacterConstant ::= '[a-zA-Z0-9]'
StringConstant ::= "[a-zA-Z0-9]*"
BooleanConstant ::= true|false

VariableType ::= int | num | byte | char | string | obj | ClassType
Identifier ::= ([_a-zA-Z][_a-zA-Z0-9]*)([\._a-zA-Z][_a-zA-Z0-9]*) // TODO: remove '.'

// TODO:
// Comments
// Logical statements
// If statements
// Loops
// Enums
// Arrays
// Classes
// Libraries
// File inclusion

ClassDeclaration ::= class ClassType { ClassMemberList }
ClassType ::= Identifier
ClassMemberList ::= ClassMember ClassMemberList | null
ClassMember ::= Declaration | Function
